--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,8 @@ testem.log
 .DS_Store
 Thumbs.db
 
-environment.prod.ts
-environment.development.ts
-environment.ts
 
+.env
+environment.development.ts
+environment.prod.ts
+environment.ts
